--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
  <script type="text/javascript" src="vector.js"></script>
  <script type="text/javascript" src="matrix.js"></script>
+  <script type="text/javascript" src="functions.js"></script>
  <script type="text/javascript" src="script.js"></script>
 
 
